--- a/wishlist/travel_wishlist/templates/travel_wishlist/wishlist.html
+++ b/wishlist/travel_wishlist/templates/travel_wishlist/wishlist.html
@@ -13,11 +13,11 @@
 {% for place in places %}
 <!-- for each place in the wishlist display each with a button to
 set visited=False to visited=True and moving that place to the visited page -->
-<div class="wishlist-place">
-
+<div>
+    <form class="visited-text" method="POST" action="{% url "place_is_visited" %}">
     <span id="place-name-{{ place.pk }}" class="visited-text">{{ place.name }}</span>
+    <p><a href="{% url place_to_visit pk=place.pk %}"></a></p>
 
-    <form class="visited-form" method="POST" action="{% url "place_is_visited" %}">
         {% csrf_token %}
         <input type="hidden" name="pk" value="{{ place.pk }}">
         <button id="mark-visited-{{ place.pk }}" type="submit">Visited!</button>
